protox-parse/src/parse/snapshots/protox_parse__parse__tests__parse_enum-3.snap
---
source: src/parse/tests.rs
expression: "match parser.parse_enum() {\n    Ok(value) => Ok(value),\n    Err(()) => Err(parser.lexer.extras.errors),\n}"
---
Ok(
    Enum {
        name: Ident {
            value: "Foo",
            span: 29..32,
        },
        options: [],
        values: [],
        reserved: [],
        comments: Comments {
            leading_detached_comments: [
                "detached",
            ],
            leading_comment: Some(
                "leading",
            ),
            trailing_comment: Some(
                "trailing\n",
            ),
        },
        span: 24..52,
    },
)
