protox-parse/src/parse/snapshots/protox_parse__parse__tests__parse_extension-2.snap
---
source: src/parse/tests.rs
expression: "match parser.parse_extend() {\n    Ok(value) => Ok(value),\n    Err(()) => Err(parser.lexer.extras.errors),\n}"
---
Ok(
    Extend {
        extendee: TypeName {
            leading_dot: None,
            name: FullIdent {
                parts: [
                    Ident {
                        value: "Foo",
                        span: 18..21,
                    },
                ],
            },
        },
        fields: [],
        comments: Comments {
            leading_detached_comments: [],
            leading_comment: Some(
                "leading",
            ),
            trailing_comment: Some(
                "trailing\n",
            ),
        },
        span: 11..37,
    },
)
