protox-parse/src/parse/snapshots/protox_parse__parse__tests__parse_extension-6.snap
---
source: src/parse/tests.rs
expression: "match parser.parse_extend() {\n    Ok(value) => Ok(value),\n    Err(()) => Err(parser.lexer.extras.errors),\n}"
---
Ok(
    Extend {
        extendee: TypeName {
            leading_dot: None,
            name: FullIdent {
                parts: [
                    Ident {
                        value: "Foo",
                        span: 7..10,
                    },
                ],
            },
        },
        fields: [
            Field {
                label: Some(
                    (
                        Repeated,
                        13..21,
                    ),
                ),
                name: Ident {
                    value: "A",
                    span: 28..29,
                },
                kind: Group {
                    ty_span: 22..27,
                    body: MessageBody {
                        items: [
                            Field(
                                Field {
                                    label: Some(
                                        (
                                            Optional,
                                            36..44,
                                        ),
                                    ),
                                    name: Ident {
                                        value: "name",
                                        span: 52..56,
                                    },
                                    kind: Normal {
                                        ty: String,
                                        ty_span: 45..51,
                                    },
                                    number: Int {
                                        negative: false,
                                        value: 2,
                                        span: 59..60,
                                    },
                                    options: None,
                                    comments: Comments {
                                        leading_detached_comments: [],
                                        leading_comment: None,
                                        trailing_comment: None,
                                    },
                                    span: 36..61,
                                },
                            ),
                        ],
                        extensions: [],
                        options: [],
                        reserved: [],
                    },
                },
                number: Int {
                    negative: false,
                    value: 1,
                    span: 32..33,
                },
                options: None,
                comments: Comments {
                    leading_detached_comments: [],
                    leading_comment: None,
                    trailing_comment: None,
                },
                span: 13..63,
            },
        ],
        comments: Comments {
            leading_detached_comments: [],
            leading_comment: None,
            trailing_comment: None,
        },
        span: 0..65,
    },
)
