protox-parse/src/parse/snapshots/protox_parse__parse__tests__parse_field-16.snap
---
source: protox-parse/src/parse/tests.rs
expression: "if parser.lexer.extras.errors.is_empty() {\n        Ok(result.unwrap())\n    } else { Err(parser.lexer.extras.errors) }"
---
Ok(
    Field {
        label: Some(
            (
                Optional,
                0..8,
            ),
        ),
        name: Ident {
            value: "name",
            span: 15..19,
        },
        kind: Normal {
            ty: Int32,
            ty_span: 9..14,
        },
        number: Int {
            negative: false,
            value: 5,
            span: 22..23,
        },
        options: Some(
            OptionList {
                options: [
                    OptionBody {
                        name: [
                            Extension(
                                TypeName {
                                    leading_dot: None,
                                    name: FullIdent {
                                        parts: [
                                            Ident {
                                                value: "ext",
                                                span: 26..29,
                                            },
                                        ],
                                    },
                                },
                                25..30,
                            ),
                        ],
                        value: String(
                            String {
                                value: "foo",
                                span: 33..38,
                            },
                        ),
                    },
                ],
                span: 24..39,
            },
        ),
        comments: Comments {
            leading_detached_comments: [],
            leading_comment: None,
            trailing_comment: None,
        },
        span: 0..40,
    },
)
