protox-parse/src/parse/snapshots/protox_parse__parse__tests__parse_field-17.snap
---
source: protox-parse/src/parse/tests.rs
expression: "if parser.lexer.extras.errors.is_empty() {\n        Ok(result.unwrap())\n    } else { Err(parser.lexer.extras.errors) }"
---
Err(
    [
        UnexpectedToken {
            expected: "a message field",
            found: "{",
            span: 0..1,
        },
    ],
)
