protox-parse/src/parse/snapshots/protox_parse__parse__tests__parse_field-3.snap
---
source: src/parse/tests.rs
expression: "if parser.lexer.extras.errors.is_empty() {\n        Ok(result.unwrap())\n    } else { Err(parser.lexer.extras.errors) }"
---
Ok(
    Field {
        label: None,
        name: Ident {
            value: "name",
            span: 17..21,
        },
        kind: Map {
            ty_span: 0..16,
            key_ty: Int32,
            key_ty_span: 4..9,
            value_ty: Bool,
            value_ty_span: 11..15,
        },
        number: Int {
            negative: false,
            value: 5,
            span: 24..25,
        },
        options: Some(
            OptionList {
                options: [
                    OptionBody {
                        name: [
                            Ident(
                                Ident {
                                    value: "opt",
                                    span: 27..30,
                                },
                            ),
                        ],
                        value: Ident {
                            negative: false,
                            ident: Ident {
                                value: "true",
                                span: 33..37,
                            },
                            span: 33..37,
                        },
                    },
                    OptionBody {
                        name: [
                            Ident(
                                Ident {
                                    value: "opt2",
                                    span: 39..43,
                                },
                            ),
                        ],
                        value: Float(
                            Float {
                                value: 4.5,
                                span: 46..49,
                            },
                        ),
                    },
                ],
                span: 26..50,
            },
        ),
        comments: Comments {
            leading_detached_comments: [],
            leading_comment: None,
            trailing_comment: None,
        },
        span: 0..51,
    },
)
