protox-parse/src/parse/snapshots/protox_parse__parse__tests__parse_field-4.snap
---
source: src/parse/tests.rs
expression: "match parser.parse_field() {\n    Ok(value) => Ok(value),\n    Err(()) => Err(parser.lexer.extras.errors),\n}"
---
Ok(
    Field {
        label: None,
        name: Ident {
            value: "invalid",
            span: 20..27,
        },
        kind: Map {
            ty_span: 0..19,
            key_ty: Named(
                TypeName {
                    leading_dot: Some(
                        4..5,
                    ),
                    name: FullIdent {
                        parts: [
                            Ident {
                                value: "foo",
                                span: 5..8,
                            },
                            Ident {
                                value: "bar",
                                span: 9..12,
                            },
                        ],
                    },
                },
            ),
            key_ty_span: 4..12,
            value_ty: Bool,
            value_ty_span: 14..18,
        },
        number: Int {
            negative: true,
            value: 0,
            span: 30..32,
        },
        options: None,
        comments: Comments {
            leading_detached_comments: [],
            leading_comment: None,
            trailing_comment: None,
        },
        span: 0..33,
    },
)
