protox-parse/src/parse/snapshots/protox_parse__parse__tests__parse_file-10.snap
---
source: src/parse/tests.rs
expression: "if parser.lexer.extras.errors.is_empty() {\n        Ok(result.unwrap())\n    } else { Err(parser.lexer.extras.errors) }"
---
Ok(
    File {
        span: 35..53,
        syntax: Proto3,
        syntax_span: Some(
            (
                35..53,
                Comments {
                    leading_detached_comments: [
                        " leading detached ",
                    ],
                    leading_comment: Some(
                        " leading\n",
                    ),
                    trailing_comment: None,
                },
            ),
        ),
        package: None,
        imports: [],
        options: [],
        items: [],
    },
)
